After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766711 - v4l2transform: scaling is broken in case of fixed pixel aspect ratio
v4l2transform: scaling is broken in case of fixed pixel aspect ratio
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.8.1
Other Linux
: Normal normal
: 1.8.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-20 12:21 UTC by Philipp Zabel
Modified: 2016-06-07 21:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
v4l2transform: fix scaling in case of fixed pixel aspect ratio (1.45 KB, patch)
2016-05-20 12:21 UTC, Philipp Zabel
committed Details | Review

Description Philipp Zabel 2016-05-20 12:21:42 UTC
Created attachment 328254 [details] [review]
v4l2transform: fix scaling in case of fixed pixel aspect ratio

Currently, when changing aspect ratio from input DAR to fixed output PAR, the fractions are multiplied to find the width scaling factor. Instead, the ratio between them should be used.
Comment 1 Nicolas Dufresne (ndufresne) 2016-06-06 21:45:58 UTC
Will go in 1.8

Attachment 328254 [details] pushed as 89a2f0a - v4l2transform: fix scaling in case of fixed pixel aspect ratio
Comment 2 Nicolas Dufresne (ndufresne) 2016-06-07 21:20:21 UTC
Branch: 1.8
Commit: f4af3bf033166c1a7c178ff67bca2668e2eb2069